# OpenGD

./: CMakeLists.txt  README.md  darknet-yolov4.cfg  default_config.cfg  download_weights.sh  live_demo.cpp
